# comfyui-florence2xy

./: BlipImgCaptioning.py  LICENSE  Phi35VisionInstruct.py  README.md  __init__.py  florence2coordinatesbutxy.py  florence3img2txt.py  load_img_with_name.py  phi35_loader.py  phi35_run.py  pyproject.toml
.github/workflows/: publish.yml  publish_action.yml
